<resources>
    <string name="app_name">What\'s the number</string>
    <string name="label_guess">Digite o palpite</string>
    <string name="label_send">ENVIAR</string>
    <string name="toolbar_title">Qual é o número?</string>
    <string name="is_bigger">É maior</string>
    <string name="is_smaller">É menor</string>
    <string name="right">Acertou!</string>
    <string name="error">Erro</string>
    <string name="label_new_game">nova partida</string>
    <string name="label_input_counter">%1$s/3</string>
    <string name="label_input_start_counter">0/3</string>
    <string name="label_zero">0</string>
    <string name="empty" />
</resources>